unit_tests/coverage.suite/lslparse-err-24.err
float a = 1e;
           ^
(Line 1 char 12): ERROR: Syntax error
