unit_tests/coverage.suite/lslparse-err-24.lsl
float a = 1e;
